# cairn

./: .gitignore  CLAUDE.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  deny.toml
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: command.rs  config.rs  docgen.rs  lib.rs  main.rs  mcp.rs  session_source.rs  skill.rs  vault.rs
crates/cairn-cli/src/plugins/: host.rs  list.rs  mod.rs  verify.rs
crates/cairn-cli/src/snapshots/: cairn_cli__skill__tests__receipt_json_snapshot.snap  cairn_cli__skill__tests__render_human_snapshot_already_installed.snap  cairn_cli__skill__tests__render_human_snapshot_fresh_install.snap
crates/cairn-cli/src/vault/: bootstrap.rs  mod.rs  registry.rs
crates/cairn-cli/src/verbs/: assemble_hot.rs  capture_trace.rs  envelope.rs  forget.rs  handshake.rs  ingest.rs  lint.rs  mcp_serve.rs  mod.rs  retrieve.rs  search.rs  status.rs  summarize.rs
crates/cairn-cli/tests/: bootstrap.rs  cli.rs  config.rs  docgen.rs  envelope_tests.rs  handshake_tests.rs  lint_folders.rs  mcp_parity.rs  mcp_subcommand.rs  pipe_tests.rs  plugins_list_snapshot.rs  plugins_verify.rs  plugins_verify_snapshot.rs  sdk_cli_parity.rs  status_snapshot.rs  vault_registry.rs  verbs_smoke.rs
crates/cairn-cli/tests/snapshots/: bootstrap__bootstrap_human_output_first_run.snap  bootstrap__bootstrap_human_output_second_run.snap  lint_folders__raw_index_single_record.snap  plugins_list_snapshot__plugins_list_human.snap  plugins_list_snapshot__plugins_list_json.snap  plugins_verify_snapshot__plugins_verify_human.snap  plugins_verify_snapshot__plugins_verify_json.snap  vault_registry__cli_vault_list__list_human_output_snapshot.snap
crates/cairn-core/: Cargo.toml
crates/cairn-core/benches/: squash.rs
crates/cairn-core/proptest-regressions/pipeline/: squash.txt
crates/cairn-core/src/: lib.rs  verifier.rs
crates/cairn-core/src/config/: mod.rs  vault_registry.rs
crates/cairn-core/src/contract/: agent_provider.rs  frontend_adapter.rs  job_store.rs  llm_provider.rs  macros.rs  manifest.rs  mcp_server.rs  memory_store.rs  mod.rs  registry.rs  sensor_ingress.rs  version.rs  workflow_orchestrator.rs
crates/cairn-core/src/domain/: actor_chain.rs  actor_ref.rs  body_hash.rs  canonical.rs  capture.rs  capture_attribution.rs  capture_manifest.rs  consent.rs  error.rs  evidence.rs  filter.rs  identity.rs  intent.rs  mod.rs  principal.rs  projection.rs  provenance.rs  record.rs  scope.rs  session.rs  target_id.rs  taxonomy.rs  timestamp.rs  (+1 more)
crates/cairn-core/tests/: capture_corner_cases.rs  capture_event.rs  conformance_tier1.rs  conformance_types.rs  contract_registry.rs  contract_root_exports.rs  filter_dsl.rs  filter_sql_exec.rs  generated_wire.rs  memory_record.proptest-regressions  memory_record.rs  pipeline_filter_e2e.rs  smoke.rs  squash_fixtures.rs
crates/cairn-idl/: Cargo.toml  README.md
crates/cairn-idl/schema/: README.md  index.json
crates/cairn-idl/src/: lib.rs
crates/cairn-idl/tests/: codegen_check_mode.rs  codegen_determinism.rs  codegen_emit_cli.rs  codegen_emit_mcp.rs  codegen_emit_sdk.rs  codegen_emit_skill.rs  codegen_fmt.rs  codegen_idempotent.rs  codegen_ir.rs  codegen_loader.rs  codegen_run.rs  codegen_snapshot.rs  codegen_surface_parity.rs  plugin_manifest_parity.rs  plugin_manifest_validation.rs  schema_discriminator.rs  schema_files.rs  skill_compat.rs  smoke.rs
crates/cairn-mcp/: Cargo.toml  plugin.toml
crates/cairn-mcp/src/: dispatch.rs  error.rs  handler.rs  lib.rs  server.rs
crates/cairn-mcp/tests/: generated_wire.rs  manifest_validates.rs  smoke.rs  tool_list_snapshot.rs  verb_parity.rs
crates/cairn-sdk/: Cargo.toml
crates/cairn-sdk/src/: error.rs  lib.rs  stub.rs  transport.rs
crates/cairn-sdk/tests/: properties.rs  surface.rs  wire_round_trip.rs
crates/cairn-sensors-local/: Cargo.toml  plugin.toml
crates/cairn-sensors-local/src/: lib.rs
crates/cairn-sensors-local/tests/: manifest_validates.rs  smoke.rs
crates/cairn-store-sqlite/: Cargo.toml  build.rs  plugin.toml
crates/cairn-store-sqlite/migrations/: 0001_init_pragmas.sql  0002_records.sql  0003_edges.sql  0004_fts5.sql  0005_wal_state.sql  0006_replay_consent.sql  0007_locks_jobs.sql  0008_meta.sql  0009_add_record_json.sql  0010_purge_scope_snapshot.sql  0011_consent_journal_idempotency.sql  0012_activation_audit.sql  0013_consent_journal_partial_idx.sql  0014_purge_per_version_snapshots.sql  0015_backfill_activation_audit.sql  0016_drop_legacy_null_record_json.sql  0017_backfill_purge_version_snapshots.sql
crates/cairn-store-sqlite/src/: apply.rs  conn.rs  consent.rs  error.rs  lib.rs  open.rs  rebac.rs  rowmap.rs  store.rs  verify.rs
crates/cairn-store-sqlite/tests/: activate_monotonicity.rs  activate_validates_existence.rs  apply_token_gate.rs  capabilities.rs  concurrent_isolation.rs  consent.rs  consent_journal_atomicity.rs  consent_journal_corner_cases.rs  cow_versioning.rs  created_by_trust_boundary.rs  crud_roundtrip.rs  drift_corner_cases.rs  edges.rs  edges_crud.rs  expire_active.rs  fts_visibility_predicate.rs  hot_columns_match_json.rs  kind_filter.rs  legacy_rows_block_open.rs  manifest_validates.rs  migration_upgrade_path.rs  migrations.rs  probe_rejects_storage_calls.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  purge_audit_marker.rs  rebac_visibility.rs  records_latest.rs  search_keyword.rs  search_keyword_e2e.rs  search_keyword_golden.rs  sessions.rs  smoke.rs  tombstone_preserves_history.rs  tombstone_reasons.rs  tombstone_retirement.rs  tx_panic_safety.rs  tx_rollback.rs  upsert_idempotent.rs  version_history_event_order.rs  (+4 more)
crates/cairn-test-fixtures/: Cargo.toml
crates/cairn-test-fixtures/src/: lib.rs  store.rs  store_conformance.rs
crates/cairn-test-fixtures/tests/: fixtures_dir.rs  schema_fixtures.rs
crates/cairn-workflows/: Cargo.toml  plugin.toml
crates/cairn-workflows/src/: consent_mirror.rs  lib.rs  sqlite_store.rs
crates/cairn-workflows/tests/: consent_mirror.rs  manifest_validates.rs  smoke.rs  sqlite_job_store.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: squash.rs
(+240 files in other folders)
