[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
authors = ["Cairn contributors"]
repository = "https://github.com/windoliver/cairn"
homepage = "https://github.com/windoliver/cairn"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
insta = { version = "1.40", features = ["json", "yaml"] }
jsonschema = { version = "0.46", default-features = false }
proptest = "1"
rstest = "0.23"
tempfile = "3"
sha2 = { version = "0.10", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Path + version on intra-workspace deps so `cargo publish` can rewrite the
# path to a registry version without losing the constraint. The version
# tracks `[workspace.package].version`; bump them together.
cairn-core = { path = "crates/cairn-core", version = "0.0.1" }
cairn-mcp = { path = "crates/cairn-mcp", version = "0.0.1" }
cairn-store-sqlite = { path = "crates/cairn-store-sqlite", version = "0.0.1" }
cairn-sensors-local = { path = "crates/cairn-sensors-local", version = "0.0.1" }
cairn-workflows = { path = "crates/cairn-workflows", version = "0.0.1" }
cairn-idl = { path = "crates/cairn-idl", version = "0.0.1" }
cairn-test-fixtures = { path = "crates/cairn-test-fixtures", version = "0.0.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "deny", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
