[package]
name = "cairn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn terminal entry point. Wires adapters into the verb layer."

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-core = { workspace = true }
cairn-mcp = { workspace = true }
cairn-store-sqlite = { workspace = true }
cairn-sensors-local = { workspace = true }
cairn-workflows = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }

[lints]
workspace = true

# Forward-declared scaffold deps. anyhow/clap/serde land their first call
# sites in Tasks 12-13 (plugins::verify and the clap dispatcher in
# main.rs). Drop each entry once its first call site exists.
[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "clap",
    "serde",
]

[lib]
name = "cairn_cli"
path = "src/lib.rs"
