[package]
name = "cairn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn terminal entry point. Wires adapters into the verb layer."

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-core = { workspace = true }
cairn-mcp = { workspace = true }
cairn-store-sqlite = { workspace = true }
cairn-sensors-local = { workspace = true }
cairn-workflows = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }
insta = { workspace = true }
async-trait = { workspace = true }
proptest = { workspace = true }
temp-env = "0.3"
tempfile = { workspace = true }

[lints]
workspace = true

# Forward-declared scaffold deps. anyhow lands its first call site when
# the verb layer is wired up in a follow-up issue. clap was dropped from
# this list in Task 17 once main.rs adopted it (Task 13). serde is now
# used by CliOverrides. Drop anyhow once its first call site exists.
[package.metadata.cargo-machete]
ignored = [
    "anyhow",
]

[lib]
name = "cairn_cli"
path = "src/lib.rs"
