[package]
name = "cairn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn verb layer, domain types, and error enums. No I/O, no adapters."

[features]
default = []
# Exposes `test_apply_token`, which mints a privileged `ApplyToken`
# bypassing both the WAL write gate and (via `Principal::system`) the
# rebac read gate. The intentionally-ugly name discourages opt-in by
# production crates; the helper is `#[doc(hidden)]`. ENABLE ONLY in
# `dev-dependencies`. Renamed from `test-util` per security review.
_test_util_unsafe = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
