[package]
name = "cairn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn verb layer, domain types, and error enums. No I/O, no adapters."

[features]
default = []
# Re-exports the in-tree `sample_record` factory under
# `cairn_core::domain::record::tests_export` so adapter crates can build the
# same canonical fixture from `[dev-dependencies]`. Never enable in
# production builds.
test-fixtures = []
# Off-by-default smoke target. Used only by the `filter-smoke` CI job
# to compile and run the §5.2 Filter pipeline against the *normal*
# (non-dev) dependency graph — feature unification through dev-deps
# (proptest / insta etc.) previously masked a missing `regex`
# `unicode-case` feature that panicked downstream binaries on first
# call. Enabling this feature does not change library behavior.
smoke = []
# Off-by-default. Exposes a stable byte-in / output-out fuzz
# entrypoint (`pipeline::squash::fuzz_entrypoint`) for cargo-fuzz
# targets. Bypasses the (still `pub(crate)`) `try_from_terminal_event`
# constructor by building a synthetic terminal event internally — the
# squash gate's eligibility is independent of capture metadata for
# fuzz purposes. Never enable in production: the `try_from_*` gate
# exists for a reason (see `pipeline/mod.rs`).
fuzz = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true, features = ["unicode-perl", "unicode-case"] }
unicode-normalization = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bin]]
name = "filter_smoke"
path = "src/bin/filter_smoke.rs"
required-features = ["smoke"]

[lints]
workspace = true
