[package]
name = "cairn-idl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn canonical IDL source and codegen driver. Standalone — no core dep."

[[bin]]
name = "cairn-codegen"
path = "src/bin/cairn-codegen.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
jsonschema = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

# Forward-declared scaffold dep used by the codegen bin once it ships. Drop
# this entry as soon as serde is referenced in a non-trivial code path.
[package.metadata.cargo-machete]
ignored = ["serde"]
