[package]
name = "cairn-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "MCP adapter surface for the Cairn verb layer."

[dependencies]
cairn-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true

