[package]
name = "cairn-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cairn SDK — typed in-process surface for the eight verbs plus status and handshake (brief §8)."

[dependencies]
cairn-core = { path = "../cairn-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
