[package]
name = "cairn-sensors-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Local sensors (IDE hook, terminal, clipboard, voice, screen) for Cairn."

[dependencies]
cairn-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }

[lints]
workspace = true

# Forward-declared scaffold deps. Drop entries as their first call site lands.
[package.metadata.cargo-machete]
ignored = ["cairn-core", "tracing"]
