[package]
name = "cairn-store-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite + FTS5 + sqlite-vec record store adapter for Cairn."

[dependencies]
cairn-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
