[package]
name = "cairn-store-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite + FTS5 + sqlite-vec record store adapter for Cairn."

[dependencies]
cairn-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

[build-dependencies]
sha2 = { workspace = true }

[dev-dependencies]
cairn-core = { workspace = true, features = ["test-util"] }
cairn-test-fixtures = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rusqlite = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["sha2", "blake3", "tracing"]
