[package]
name = "cairn-store-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite + FTS5 + sqlite-vec record store adapter for Cairn."

[dependencies]
cairn-core = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio_rusqlite = { workspace = true }
tracing = { workspace = true }

[features]
default = []
# Exposes sync `rusqlite::Connection` open helpers for integration tests.
# Not part of the production API — keeps the test surface explicit.
test-helpers = []

[dev-dependencies]
cairn-store-sqlite = { path = ".", features = ["test-helpers"] }
cairn-test-fixtures = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
