[package]
name = "cairn-test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared test helpers and fixture loaders for Cairn crates."

[dependencies]
cairn-core = { workspace = true, features = ["test-fixtures"] }
cairn-store-sqlite = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
