[package]
name = "cairn-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Background workflows host (consolidate, promote, expire, evaluate) for Cairn."

[dependencies]
cairn-core = { workspace = true }
cairn-store-sqlite = { workspace = true }
async-trait = { workspace = true }
fs4 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
cairn-test-fixtures = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

# Forward-declared scaffold deps. Drop entries as their first call site lands.
[package.metadata.cargo-machete]
ignored = ["tokio", "tracing"]
