[package]
name = "cairn-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Background workflows host (consolidate, promote, expire, evaluate) for Cairn."

[dependencies]
cairn-core = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
cairn-store-sqlite = { workspace = true, features = ["test-helpers"] }
cairn-test-fixtures = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "test-util"] }

[lints]
workspace = true
